# colourmap

./: LICENSE  MANIFEST.in  README.md  make_clean.sh  make_new_build.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/: FUNDING.yml
colourmap/: __init__.py  colourmap.py  examples.py
docs/pages/doctrees/: Coding quality.doctree  Documentation.doctree  Examples.doctree  Installation.doctree  Tutorials.doctree  colourmap.colourmap.doctree  environment.pickle  index.doctree  sponsor.doctree
docs/pages/html/: .buildinfo  Coding quality.html  Documentation.html  Examples.html  Installation.html  Tutorials.html  colourmap.colourmap.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sponsor.html
docs/pages/html/_sources/: Coding quality.rst.txt  Documentation.rst.txt  Examples.rst.txt  Installation.rst.txt  Tutorials.rst.txt  colourmap.colourmap.rst.txt  index.rst.txt
docs/pages/html/_static/: documentation_options.js
docs/source/: CITATION.cff  Coding quality.rst  Documentation.rst  Examples.rst  Installation.rst  Tutorials.rst  colourmap.colourmap.rst  conf.py  index.rst
tests/: test_colourmap.py
